[package]
name = "raftkv"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.8.0"
tokio = "1.0.1"
jsonrpc-core = "16.0.0"
jsonrpc-http-server = "16.0.0"
jsonrpc-core-client = "16.0.0"
jsonrpc-derive = "16.0.0"
